tests/baselines/reference/interfaceImplementation7.errors.txt
tests/cases/compiler/interfaceImplementation7.ts(4,11): error TS2320: Interface 'i3' cannot simultaneously extend types 'i1' and 'i2'.
  Named property 'name' of types 'i1' and 'i2' are not identical.
tests/cases/compiler/interfaceImplementation7.ts(8,12): error TS2416: Property 'name' in type 'C1' is not assignable to the same property in base type 'i4'.
  Type '() => string' is not assignable to type '() => { s: string; n: number; }'.
    Type 'string' is not assignable to type '{ s: string; n: number; }'.


==== tests/cases/compiler/interfaceImplementation7.ts (2 errors) ====
    interface i1{ name(): { s: string; }; }
    interface i2{ name(): { n: number; }; }
    
    interface i3 extends i1, i2 { }
              ~~
!!! error TS2320: Interface 'i3' cannot simultaneously extend types 'i1' and 'i2'.
!!! error TS2320:   Named property 'name' of types 'i1' and 'i2' are not identical.
    interface i4 extends i1, i2 { name(): { s: string; n: number; }; }
    
    class C1 implements i4 {
        public name(): string { return ""; }
               ~~~~
!!! error TS2416: Property 'name' in type 'C1' is not assignable to the same property in base type 'i4'.
!!! error TS2416:   Type '() => string' is not assignable to type '() => { {|s|0|}: string; {|n|1|}: number; }'.
!!! error TS2416:     Type 'string' is not assignable to type '{ {|s|2|}: string; {|n|3|}: number; }'.
!!! annotated symbol 0 tests/cases/compiler/interfaceImplementation7.ts:5:41
!!! annotated symbol 1 tests/cases/compiler/interfaceImplementation7.ts:5:52
!!! annotated symbol 2 tests/cases/compiler/interfaceImplementation7.ts:5:41
!!! annotated symbol 3 tests/cases/compiler/interfaceImplementation7.ts:5:52
    }
    